--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -3,6 +3,11 @@ api_platform:
     version: 1.0.0
     formats:
         jsonld: ['application/ld+json']
+    swagger:
+        api_keys:
+            JWT:
+                name: Authorization
+                type: header
     docs_formats:
         jsonld: ['application/ld+json']
         jsonopenapi: ['application/vnd.openapi+json']
