--- a/config/packages/lexik_jwt_authentication.yaml
+++ b/config/packages/lexik_jwt_authentication.yaml
@@ -2,7 +2,7 @@ lexik_jwt_authentication:
     secret_key: '%env(resolve:JWT_SECRET_KEY)%'
     public_key: '%env(resolve:JWT_PUBLIC_KEY)%'
     pass_phrase: '%env(JWT_PASSPHRASE)%'
-#    token_ttl: 120  # ce token expire au bout de 2 minutes
+    token_ttl: 120  # ce token expire au bout de 2 minutes
 
     # on lui dit ce qu'on attend
     api_platform:
